@@ -127,6 +127,10 @@ extern size_t strlcat(char *dst, const char *src, size_t siz);
 
 /****************************************************************************/
 
+extern char * strtok_r(char *str, const char *separator_set,char ** state_ptr);
+
+/****************************************************************************/
+
 #ifdef __cplusplus
 }
 #endif /* __cplusplus */
