@@ -95,6 +95,17 @@ extern size_t strftime(char *s, size_t maxsize, const char *format,
 
 /****************************************************************************/
 
+/* The following is not part of the ISO 'C' (1994) standard. */
+
+/****************************************************************************/
+
+extern char * asctime_r(const struct tm *tm,char * buffer);
+extern char * ctime_r(const time_t *tptr,char * buffer);
+extern struct tm * gmtime_r(const time_t *t,struct tm * tm_ptr);
+extern struct tm * localtime_r(const time_t *t,struct tm * tm_ptr);
+
+/****************************************************************************/
+
 #ifdef __cplusplus
 }
 #endif /* __cplusplus */
